--- a/Front-End/Image-Converter/src/app/nav/nav.component.scss
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.scss
@@ -74,56 +74,7 @@ mat-toolbar {
     padding: 0 0 0px 0;
     font-size: 12px;
   }
-  
-  // .footer .footer-newsletter {
-  //   padding: 50px 0;
-  //   background: #f6f9ff;
-  //   border-top: 1px solid #e1ecff;
-  // }
-  
-  // .footer .footer-newsletter h4 {
-  //   font-size: 24px;
-  //   margin: 0 0 10px 0;
-  //   padding: 0;
-  //   line-height: 1;
-  //   font-weight: 700;
-  //   color: #012970;
-  // }
-  
-  // .footer .footer-newsletter form {
-  //   margin-top: 20px;
-  //   background: #fff;
-  //   padding: 6px 10px;
-  //   position: relative;
-  //   border-radius: 4px;
-  //   border: 1px solid #e1ecff;
-  // }
-  
-  // .footer .footer-newsletter form input[type=email] {
-  //   border: 0;
-  //   padding: 8px;
-  //   width: calc(100% - 140px);
-  // }
-  
-  // .footer .footer-newsletter form input[type=submit] {
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   bottom: 0;
-  //   border: 0;
-  //   background: none;
-  //   font-size: 16px;
-  //   padding: 0 30px;
-  //   margin: 3px;
-  //   background: #4154f1;
-  //   color: #fff;
-  //   transition: 0.3s;
-  //   border-radius: 4px;
-  // }
-  
-  // .footer .footer-newsletter form input[type=submit]:hover {
-  //   background: #5969f3;
-  // }
+
   
   .footer .footer-top {
     // background: white url(../img/footer-bg.png) no-repeat right top;
@@ -278,6 +229,7 @@ mat-toolbar {
     color: #333333;
     font-family: "Nunito", sans-serif;
     margin-top: 3px;
+    // cursor: pointer;
   }
 
 
@@ -340,6 +292,7 @@ a:focus {
 // }
 span{
   font-size: medium;
+  
 }
 
 .wrapper {
@@ -389,6 +342,15 @@ span{
 
 #sidebar h1 {
   font: 400 28px / 32px Roboto, "Helvetica Neue", sans-serif;
+  cursor: pointer;
+}
+
+#sidebar img {
+    max-height: 80px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
 }
 
 #sidebar ul li.active>a,
