--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -44,7 +44,7 @@
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container> -->
-  <!-- <app-toolbar></app-toolbar> -->
+  <app-toolbar></app-toolbar>
 
 <!DOCTYPE html>
 <html>
@@ -163,12 +163,12 @@
 
         <div id="content">
 
-          <div class="container-fluid" id="burger">
+          <!-- <div class="container-fluid" id="burger">
             <button type="button" id="sidebarCollapse" class="btn btn-info">
                 <i class="fas fa-align-left"></i>
                 <span>Menu</span>
             </button>
-          </div>
+          </div> -->
 
             
 
@@ -215,37 +215,4 @@
 
 </html>
  <app-footer></app-footer>
-  <!-- <footer id="footer" class="footer">
-
-    
-
-    <div class="footer-top">
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-5 col-md-12 footer-info">
-            <a href="index.html" class="logo d-flex align-items-center">
-              
-              <span>Image-Converter</span>
-            </a>
-            <p>In partnership with MathU Teaching Emporium and the COS 301 team</p>
-            <div class="social-links mt-3">
-              
-              <a href="https://github.com/COS301-SE-2022/Image-Converter" class="linkedin"><i class="bi bi-github"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-            <h4>Contact Us</h4>
-            <p>
-              <strong>Email:</strong> hardcode8102gmail.com Powered by by HardCode
-            </p>
-          
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-  </footer> -->
-  <!-- End Footer -->
+  
