--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -163,12 +163,15 @@
 
         <div id="content">
 
-          <!-- <div class="container-fluid" id="burger">
-            <button type="button" id="sidebarCollapse" class="btn btn-info">
-                <i class="fas fa-align-left"></i>
-                <span>Menu</span>
-            </button>
-          </div> -->
+          <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+            <div class="container-fluid" id="burger">
+              <button type="button" id="sidebarCollapse" class="btn btn-info">
+                  <i class="fas fa-align-left"></i>
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+          </nav> -->
 
             
 
