--- a/Front-End/Image-Converter/src/app/nav/nav.component.scss
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.scss
@@ -133,10 +133,12 @@ a:focus {
 .navbar {
     padding: 15px 10px;
     background: #fff;
+    // background-color: rgb(0 0 0 / 0%);
     border: none;
     border-radius: 0;
     margin-bottom: 40px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    
 }
 
 .navbar-btn {
