--- a/Front-End/Image-Converter/src/app/toolbar/toolbar.component.html
+++ b/Front-End/Image-Converter/src/app/toolbar/toolbar.component.html
@@ -13,11 +13,12 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
+                <div class="container-fluid" id="burger">
 
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
                         <i class="fas fa-align-left"></i>
-                        <span>Toggle Sidebar</span>
+                        <!-- <span>Toggle Sidebar</span> -->
+                        <span class="navbar-toggler-icon"></span>
                     </button>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
