--- a/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.scss
+++ b/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.scss
@@ -179,37 +179,44 @@ button:disabled {
 
 
 .header {
-transition: all 0.5s;
-z-index: 997;
-padding: 20px 0;
-// background-color: rgb(190, 185, 185);
-background-color: #fff;
-box-shadow: 0px 0 30px rgba(1, 41, 112, 0.7);
+  transition: all 0.5s;
+  z-index: 997;
+  padding: 5px 0;
+  // background-color: rgb(190, 185, 185);
+  background-color: #fff;
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.7);
 }
 
 .header.header-scrolled {
-background: rgb(139, 37, 37);
-padding: 15px 0;
-box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.9);
+  background: rgb(139, 37, 37);
+  padding: 15px 0;
+  box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.9);
 }
 
 .header .logo {
-line-height: 0;
+  line-height: 0;
 }
 
 .header .logo img {
-max-height: 40px;
-margin-right: 6px;
+  // max-height: 40px;
+  // margin-right: 6px;
+  height:60px;
+  width: 60px;
 }
 
 .header .logo span {
-font-size: 30px;
-font-weight: 700;
-letter-spacing: 1px;
-color: #333333;
-font-family: "Nunito", sans-serif;
-margin-top: 3px;
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  color: #333333;
+  font-family: "Nunito", sans-serif;
+  margin-top: 3px;
 }
+
+.header a{
+  text-decoration: none;
+}
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
