💄(html/css): Fixing unrecognized images

--- a/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.html
+++ b/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.html
@@ -1,4 +1,5 @@
-<link href="https://www.w3schools.com/w3css/4/w3.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
    <h1 class="text-heading"><b>Unrecognized Images</b></h1>
@@ -26,7 +27,7 @@
         <div class="w3-card-4" >
           <div id="uploaded">
             <button (click)="imageClick(i,'uploaded')">
-                <img id="imgLink" src={{uploadedImg[i]}} alt="response img" width="200" height="200">
+                <img id="imgLink" src={{uploadedImg[i]}} alt="response img" width="210" height="200">
               </button>
            </div>
         </div>
