--- a/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.scss
+++ b/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.scss
@@ -4,6 +4,12 @@
     padding-bottom: 20px;
   }
 
+  #uploaded{
+    padding:30px;
+    height:260px;
+    width:250px;
+}
+
    
 bodY {
   margin: 0;
