🚧(html/css):  Drop down menu

--- a/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.html
+++ b/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="admin-box">
     <div>
         <h2>Uploaded Image</h2>
         <button class="w3-button w3-round w3-block w3-black" (click)="downloadFile(imageUrl)">
@@ -11,28 +11,21 @@
             <img [src]="imageProcessedUrl" id="popupImg" alt="img" />
         </button>
     </div>
-    <div>
+    <div class="delete-button">
        <button class="w3-button w3-round w3-block w3-red" (click)="deleteImages()">Delete Images</button>
     </div>
-    
-    <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
-        <div class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+    <div class = "select-button">
+        <div class="select">
+            <!-- <p>Select the graphType </p> -->
+            <select #type (change)="feedback(type.value)">
+                <option default>Select the graphType</option>
+                <option>straight line</option>
+                <option>bar graph</option>
+                <option>pie chart</option>
+                <option>scatter plot</option>
+            </select>
         </div>
-      </div>
-
-    <div>
-        <p>Select the graphType </p>
-        <select #type (change)="feedback(type.value)">
-            <option default>Pick a graphType</option>
-            <option>straight line</option>
-            <option>bar graph</option>
-            <option>pie chart</option>
-            <option>scatter plot</option>
-        </select>
     </div>
+    
     
 </div>
