--- a/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.scss
+++ b/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.scss
@@ -3,43 +3,65 @@
     //height:80%;
     
 }
+.admin-box{
+    height:fit-content;
+}
 
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
+.delete-button{
+    padding-top: 10px;
+}
 
-.dropdown-content {
+.select-button{
+    padding-top: 20px;
+}
+
+ 
+select {
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    -ms-appearance:none;
+    appearance:none;
+    outline:0;
+    box-shadow:none;
+    border:0!important;
+    background: #333333;
+    background-image: none;
+    flex: 1;
+    padding: 0 .5em;
+    color:#fff;
+    cursor:pointer;
+    font-size: 1.2em;
+    // font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans';
+    padding-left: 10px;
+ }
+ select::-ms-expand {
     display: none;
+ }
+ .select {
+    position: relative;
+    display: flex;
+    width: 20em;
+    height: 3em;
+    line-height: 3;
+    background: #333333;
+    overflow: hidden;
+    border-radius: .25em;
+ }
+ .select::after {
+    content: '\25BC';
     position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {background-color: #f1f1f1}
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-  }
+    top: 0;
+    right: 0;
+    padding: 0 1em;
+    background: #333333;
+    cursor:pointer;
+    pointer-events:none;
+    transition:.25s all ease;
+    bottom: 100%
+ }
+ .select:hover::after {
+    color: white;
+ }
+ 
+ 
