🚧(py): Changes for model

--- a/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.html
+++ b/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.html
@@ -18,7 +18,7 @@
         <div class="select">
             <!-- <p>Select the graphType </p> -->
             <select #type (change)="feedback(type.value)">
-                <option default>Select the graphType</option>
+                <option default>Select graphType</option>
                 <option>straight line</option>
                 <option>bar graph</option>
                 <option>pie chart</option>
