--- a/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.scss
+++ b/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.scss
@@ -24,15 +24,16 @@ select {
     outline:0;
     box-shadow:none;
     border:0!important;
-    background: #333333;
+    // background: #333333;
+    background: #5c6664;
     background-image: none;
     flex: 1;
     padding: 0 .5em;
     color:#fff;
     cursor:pointer;
     font-size: 1.2em;
-    // font-family: 'Open Sans', sans-serif;
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
+    // font-family: 'Open Sans';
     padding-left: 10px;
  }
  select::-ms-expand {
@@ -42,7 +43,7 @@ select {
     position: relative;
     display: flex;
     width: 20em;
-    height: 3em;
+    height: 3.5em;
     line-height: 3;
     background: #333333;
     overflow: hidden;
@@ -51,14 +52,14 @@ select {
  .select::after {
     content: '\25BC';
     position: absolute;
+    height: 3.5em;
     top: 0;
     right: 0;
     padding: 0 1em;
-    background: #333333;
+    background: #2b2e2e;
     cursor:pointer;
     pointer-events:none;
     transition:.25s all ease;
-    bottom: 100%
  }
  .select:hover::after {
     color: white;
