💄(html/css): Fixed dashboard cursor

--- a/Front-End/Image-Converter/src/app/dashboard/dashboard.component.scss
+++ b/Front-End/Image-Converter/src/app/dashboard/dashboard.component.scss
@@ -1,3 +1,23 @@
 *{
     scroll-behavior: smooth;
+
+    .imageUpload{
+        cursor: pointer;
+    }
+
+    .imageFilter{
+        cursor: pointer;
+    }
+    .conversionFormat{
+        cursor: pointer;
+    }
+    .livegraphing{
+        cursor: pointer;
+    }
+    .uploadHistory{
+        cursor: pointer
+    }
+    .unrecognizedImg{
+        cursor: pointer;
+    }
 }
