:lipstick: loading indicator implementation

--- a/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
+++ b/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
@@ -74,7 +74,10 @@
                         Email is <strong>required</strong>
                       </mat-error>
 
-                <button id="resetbtn" [disabled]="form.get('email')?.invalid" type="submit">Reset password</button>
+                <button id="resetbtn" *ngIf="!loading" [disabled]="form.get('email')?.invalid" type="submit">Reset password</button>
+                <button  type="submit" *ngIf="loading">
+                  <mat-spinner id="spin" [diameter]="25" primary style="margin:0 auto;"></mat-spinner>
+                </button>
                 <p *ngIf="buttonReset != '' && !_match" class="alert alert-danger"> 
                     Invalid Email!              
                     </p> 
@@ -90,7 +93,10 @@
                      <mat-error class="text-danger" *ngIf="formCode.get('code')?.touched && formCode.get('code')?.invalid"> 
                         Please enter 4 <strong class="text-danger">numeric</strong> digits
                     </mat-error>
-                <button id="resetbtn" [disabled]="formCode.get('code')?.invalid" type="submit">Confirm</button>
+                <button id="resetbtn"  *ngIf="!loading" [disabled]="formCode.get('code')?.invalid" type="submit">Confirm</button>
+                <button  type="submit" *ngIf="loading">
+                  <mat-spinner id="spin" [diameter]="25" primary style="margin:0 auto;"></mat-spinner>
+              </button>
                 <p *ngIf="buttonReset != '' && !_match" class="alert alert-danger"> 
                     Invalid Code!              
                 </p> 
@@ -118,7 +124,10 @@
                       <div *ngIf="formPass.controls.cpassword.errors.MustMatch">Password is not the same</div>                                         
                     </div>
                     
-                <button id="resetbtn" [disabled]=" formPass.get('cpassword')?.invalid" type="submit">Confirm</button>
+                <button id="resetbtn" *ngIf="!loading" [disabled]=" formPass.get('cpassword')?.invalid" type="submit">Confirm</button>
+                <button  type="submit" *ngIf="loading">
+                  <mat-spinner id="spin" [diameter]="25" primary style="margin:0 auto;"></mat-spinner>
+              </button>
                 <p *ngIf="buttonReset != '' && !_match" class="alert alert-danger"> 
                     Invalid Password!              
                     </p> 
