--- a/Front-End/Image-Converter/src/app/conversion/conversion.component.html
+++ b/Front-End/Image-Converter/src/app/conversion/conversion.component.html
@@ -1,7 +1,7 @@
 <!-- Conversion Formats -->
 <div class="w3-container" id="conversionFormats" style="margin-top:75px" *ngIf=dispBool>
-    <h1 class="w3-xxxlarge w3-text-black"><b>Conversion Formats</b></h1>
-    <hr style="width:50px;border:5px solid black" class="w3-round">
+    <h1 class="text-heading"><b>Conversion Formats</b></h1>
+    <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
 
     <div class="w3-row w3-container">
         <div class="w3-col s4  w3-center w3-padding-large">
