--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -24,9 +24,9 @@ body {font-size:16px;}
     }
   </style>
   <!--Image Filters-->  
-  <div class="w3-container" id="imageFilters" style="margin-top:50px">
-    <h1 class="w3-xxxlarge w3-text-black"><b>Processed Image</b></h1>
-    <hr style="width:50px;border:5px solid black" class="w3-round">
+  <div class="w3-container" id="imageFilters" style="margin-top:5px">
+    <h1 class="text-heading"><b>Processed Image</b></h1>
+    <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
       <div  id="processedImg">  
         <div class="w3-container w3-cell">
             <img id="imgLink" src={{message.image}} alt="response img" width="400" height="400"><br/>
