--- a/Front-End/Image-Converter/src/app/filter/filter.component.scss
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.scss
@@ -1,3 +1,9 @@
+.text-heading{
+	font-size:  50px;
+	text-decoration: underline;
+	padding-bottom: 20px;
+  }
+
 .nav-header {
 	font-size: 1.5rem;
 }
