--- a/Front-End/Image-Converter/src/app/gallery/gallery.component.html
+++ b/Front-End/Image-Converter/src/app/gallery/gallery.component.html
@@ -1,1 +1,39 @@
-<p>gallery works!</p>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<div class="w3-container" id="uploadHistory" style="margin-top:5px">
+   <h1 class="text-heading"><b>gallery</b></h1>
+   <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
+
+    <!-- <h1>Recent Uploads</h1> -->
+   <!-- <img *ngIf="loading" src="assets/loading.gif" width="400" /> -->
+   <!-- <mat-spinner *ngIf="loading" id="spin" [diameter]="150" primary style="margin-top:50px;margin:0 auto;"></mat-spinner> -->
+   <!-- <div class="center" *ngIf="loading">
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+  </div> -->
+   <div  class="w3-row w3-container">
+    <div *ngFor="let name of graphNames;index as i;">
+      <div class="w3-col s4  w3-center w3-padding-large">
+        <div class="w3-card-4" >
+          <div id="uploaded">
+            <button (click)="fileSelection(name)">
+                <h2>{{name}} Graph</h2>
+              <!-- <img id="imgLink" src={{uploadedImg[i]}} alt="response img" width="210" height="200"> -->
+            </button>
+           </div>
+        </div>
+      </div> 
+    </div>
+   </div>
+</div>
+
+
