--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.html
@@ -118,7 +118,7 @@
             <div class="box">
               <img src="assets/img/ai2.jpg" class="img-fluid" alt="">
               <h3>Classification and Storage</h3>
-              <p>Our system recognizes the tyoes of graph images uploaded, aiding in the storage of these different images based on their classification</p>
+              <p>Our system recognizes the types of graph images uploaded, aiding in the storage of these different images based on their classification</p>
             </div>
           </div>
 
