--- a/Front-End/Image-Converter/src/app/gallery/gallery.component.html
+++ b/Front-End/Image-Converter/src/app/gallery/gallery.component.html
@@ -20,20 +20,111 @@
     <div class="wave"></div>
     <div class="wave"></div>
   </div> -->
-   <div  class="w3-row w3-container">
+
+   <!-- <div  class="w3-row w3-container">
     <div *ngFor="let name of graphNames;index as i;">
       <div class="w3-col s4  w3-center w3-padding-large">
         <div class="w3-card-4" >
           <div id="uploaded">
             <button (click)="fileSelection(name)">
                 <h2>{{name}} Graph</h2>
-              <!-- <img id="imgLink" src={{uploadedImg[i]}} alt="response img" width="210" height="200"> -->
+              
             </button>
            </div>
         </div>
       </div> 
     </div>
-   </div>
+   </div> -->
+
+
+
+   <main id="main">
+   <section id="values" class="values">
+
+    <div class="container" data-aos="fade-up">
+
+
+      <div class="row">
+
+        <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="box">
+            <img src="assets/img/para-1.gif" (click)='fileSelection("Line")' class="img-fluid" alt="">
+            <!-- <button (click)="fileSelection(name)">
+              <h2>{{name}} Graph</h2>
+            
+          </button> -->
+            <h3 (click)='fileSelection("Line")'>Line Graphs</h3>
+            
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
+          <div class="box">
+            <img src="assets/img/galleryBarChart.png" (click)='fileSelection("Bar")'  class="img-fluid" alt="">
+            <h3 (click)='fileSelection("Bar")' >Bar Graphs</h3>
+            
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="600">
+          <div class="box">
+            <img src="assets/img/bloxplots.jpg" (click)='fileSelection("Chart")' class="img-fluid" alt="">
+            <h3 (click)='fileSelection("Chart")'>Charts</h3>
+            
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
+
+  </main>
+
+
+
+
+  <!-- <main id="main">
+    <section id="values" class="values">
+ 
+     <div class="container" data-aos="fade-up">
+ 
+ 
+       <div class="row">
+ 
+         <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+           <div class="box">
+             <img src="assets/img/para-1.gif" (click)="onSubmitLineGraphs()" class="img-fluid" alt="">
+             <h3 (click)="onSubmitLineGraphs()">Line Graphs</h3>
+             
+           </div>
+         </div>
+ 
+         <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
+           <div class="box">
+             <img src="assets/img/galleryBarChart.png" class="img-fluid" alt="">
+             <h3 (click)="onSubmitLineGraphs()" >Bar Graphs</h3>
+             
+           </div>
+         </div>
+ 
+         <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="600">
+           <div class="box">
+             <img src="assets/img/bloxplots.jpg" class="img-fluid" alt="">
+             <h3 (click)="onSubmitLineGraphs()" >Charts</h3>
+             
+           </div>
+         </div>
+ 
+       </div>
+ 
+     </div>
+ 
+   </section>
+ 
+   </main> -->
+
 </div>
 
 
