✨ (Front-end) Adding a comment section

--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -58,4 +58,25 @@
            <div id="conversionFormat">
              <app-conversion></app-conversion>
            </div>
+
+          <!--Image Annotation-->
+          <div class="container">  
+            <h1>Comment   
+            </h1>  
+            <hr />  
+            <div class="form-group" >  
+                <form ng-controller="commentControler">  
+                    <textarea class="form-control" rows="5" placeholder="Your Comment Please....."  ng-model="CommentText"></textarea>  
+                    <br />  
+                    <button class="btn btn-success pull-right" ng-click="addComment()">Comment.</button>  
+                    <br />  
+                    <hr />  
+                    <ul class="list-group" >  
+                        <li class="list-group-item" ng-repeat="cmt in commentArray">{{cmt}}  
+                            <a href="" ng-click="romoveComment($comText);" ><span class="glyphicon glyphicon-trash" style="float:right"> </span></a>  
+                        </li>  
+                    </ul>  
+                </form>  
+            </div>  
+        </div>
         
