:bug: integration of graph gallery

--- a/Front-End/Image-Converter/src/app/gallery/gallery.component.html
+++ b/Front-End/Image-Converter/src/app/gallery/gallery.component.html
@@ -48,28 +48,28 @@
 
         <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
           <div class="box">
-            <img src="assets/img/para-1.gif" (click)='fileSelection("Line")' class="img-fluid" alt="">
+            <img src="assets/img/para-1.gif" (click)='fileSelection("line graph")' class="img-fluid" alt="">
             <!-- <button (click)="fileSelection(name)">
               <h2>{{name}} Graph</h2>
             
           </button> -->
-            <h3 (click)='fileSelection("Line")'>Line Graphs</h3>
+            <h3 (click)='fileSelection("line graph")'>Line Graphs</h3>
             
           </div>
         </div>
 
         <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
           <div class="box">
-            <img src="assets/img/galleryBarChart.png" (click)='fileSelection("Bar")'  class="img-fluid" alt="">
-            <h3 (click)='fileSelection("Bar")' >Bar Graphs</h3>
+            <img src="assets/img/galleryBarChart.png" (click)='fileSelection("bar graph")'  class="img-fluid" alt="">
+            <h3 (click)='fileSelection("bar graph")' >Bar Graphs</h3>
             
           </div>
         </div>
 
         <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="600">
           <div class="box">
-            <img src="assets/img/bloxplots.jpg" (click)='fileSelection("Chart")' class="img-fluid" alt="">
-            <h3 (click)='fileSelection("Chart")'>Charts</h3>
+            <img src="assets/img/bloxplots.jpg" (click)='fileSelection("pie chart")' class="img-fluid" alt="">
+            <h3 (click)='fileSelection("pie chart")'>Charts</h3>
             
           </div>
         </div>
