--- a/Front-End/Image-Converter/src/app/gallery/gallery.component.html
+++ b/Front-End/Image-Converter/src/app/gallery/gallery.component.html
@@ -53,7 +53,7 @@
               <h2>{{name}} Graph</h2>
             
           </button> -->
-            <h3 (click)='fileSelection("Line")'>Line Graphs</h3>
+            <h3 (click)='fileSelection("line graph")'>Line Graphs</h3>
             
           </div>
         </div>
@@ -61,7 +61,38 @@
         <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
           <div class="box">
             <img src="assets/img/galleryBarChart.png" (click)='fileSelection("Bar")'  class="img-fluid" alt="">
-            <h3 (click)='fileSelection("Bar")' >Bar Graphs</h3>
+            <h3 (click)='fileSelection("bar graph")' >Bar Graphs</h3>
+            
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="600">
+          <div class="box">
+            <img src="assets/img/galleryPie.png" (click)='fileSelection("Chart")' class="img-fluid" alt="">
+            <h3 (click)='fileSelection("pie chart")'>Pie Charts</h3>
+            
+          </div>
+        </div>
+
+        
+
+      </div>
+
+
+      <div class="row">
+
+        <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+          <div class="box">
+            <img src="assets/img/flow.png" (click)='fileSelection("Line")' class="img-fluid" alt="">
+            <h3 (click)='fileSelection("flow chart")'>Flow Charts</h3>
+            
+          </div>
+        </div>
+
+        <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
+          <div class="box">
+            <img src="assets/img/bloxplots.jpg" (click)='fileSelection("Bar")'  class="img-fluid" alt="">
+            <h3 (click)='fileSelection("table")' >Tables</h3>
             
           </div>
         </div>
@@ -73,6 +104,8 @@
             
           </div>
         </div>
+
+        
 
       </div>
 
