:bug: minor fixes

--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -107,10 +107,10 @@
                     </a>
                 </li>
                 <li>
-                    <a (click)="onSubmitHistory()">
+                    <a (click)="onSubmitGallery()">
                       <button  mat-button class="menu-button">
                         <mat-icon>history</mat-icon>
-                        <span>Upload History</span>
+                        <span>Gallery</span>
                       </button>
                     </a>
                     
