--- a/Front-End/Image-Converter/src/app/image-popup/image-popup.component.html
+++ b/Front-End/Image-Converter/src/app/image-popup/image-popup.component.html
@@ -1,12 +1,7 @@
 <div>
     <div>
-        <h2>Uploaded Image</h2>
-        <button class="w3-button w3-round w3-block w3-black" (click)="downloadFile(imageUrl)">
-            <img [src]="imageUrl" id="popupImg" alt="img" />
-        </button>
-        <br />
         <br/>
-        <h2>Processed Image</h2>
+        <h2>Image</h2>
         <button class="w3-button w3-round w3-block w3-black" (click)="downloadFile(imageProcessedUrl)">
             <img [src]="imageProcessedUrl" id="popupImg" alt="img" />
         </button>
