--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -2,12 +2,26 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
-   <h1 class="text-heading"><b>{{selectedFolder}}</b></h1>
+  
+   
+   <div class="headerDiv">
+    <div id="heading">
+      <h1 class="text-heading"><b>{{selectedFolder}}</b></h1>
+    </div>
+
+    <div id="searchDiv">
+      <app-search></app-search>
+    </div>
+
+   </div>
    <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
 
     <!-- <h1>Recent Uploads</h1> -->
    <!-- <img *ngIf="loading" src="assets/loading.gif" width="400" /> -->
    <!-- <mat-spinner *ngIf="loading" id="spin" [diameter]="150" primary style="margin-top:50px;margin:0 auto;"></mat-spinner> -->
+
+   
+
    <div class="center" *ngIf="loading">
     <div class="wave"></div>
     <div class="wave"></div>
@@ -20,6 +34,9 @@
     <div class="wave"></div>
     <div class="wave"></div>
   </div>
+
+  
+    
    <div *ngIf="!loading" class="w3-row w3-container">
     <div *ngFor="let image of uploadedImgProcessed;index as i;">
       <div class="w3-col s4  w3-center w3-padding-large">
