:construction: socket client functionality

--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -50,6 +50,8 @@
               </button>
             </mat-card-actions>
           </mat-card>
+
+          <div id="progress"></div>
             <!-- Image Filters -->
             <div id="imageFilter">
               <app-filter></app-filter>
