--- a/Front-End/Image-Converter/src/app/welcome-page/welcome-page.component.html
+++ b/Front-End/Image-Converter/src/app/welcome-page/welcome-page.component.html
@@ -137,9 +137,9 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
             <div class="service-box pink">
               <i class="ri-discuss-line icon"></i>
-              <h2>Retraining</h2>
-              <p>The retraining capability enables you to submit the categorised data to be used to retrain the classification model in order to increase its accuracy and robustness </p>
-              <a href="#" class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
+              <h2>Gallery</h2>
+              <p>View all the images as categorised by their graph type</p>
+              <a (click)="onSubmitGallery()"class="read-more"><span>See More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
