--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -1,4 +1,4 @@
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
@@ -14,12 +14,7 @@
     </div>
 
    </div>
-   <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
-
-    <!-- <h1>Recent Uploads</h1> -->
-   <!-- <img *ngIf="loading" src="assets/loading.gif" width="400" /> -->
-   <!-- <mat-spinner *ngIf="loading" id="spin" [diameter]="150" primary style="margin-top:50px;margin:0 auto;"></mat-spinner> -->
-
+   
    
 
    <div class="center" *ngIf="loading">
@@ -33,8 +28,12 @@
     <div class="wave"></div>
     <div class="wave"></div>
     <div class="wave"></div>
+
   </div>
 
+
+  <main id="main">
+    <section id="values" class="values">
   
     
    <div *ngIf="!loading" class="w3-row w3-container">
@@ -50,4 +49,120 @@
       </div> 
     </div>
    </div>
+
+
+  </section>
+
+</main>
+
+</div> -->
+
+
+
+
+
+
+
+
+<!-- gallery code -->
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<div class="w3-container" id="uploadHistory" style="margin-top:5px">
+   <!-- <h1 class="text-heading"><b>gallery</b></h1> -->
+   <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
+
+    <!-- <h1>Recent Uploads</h1> -->
+   <!-- <img *ngIf="loading" src="assets/loading.gif" width="400" /> -->
+   <!-- <mat-spinner *ngIf="loading" id="spin" [diameter]="150" primary style="margin-top:50px;margin:0 auto;"></mat-spinner> -->
+
+   <div class="headerDiv">
+    <div id="heading">
+      <h1 class="text-heading"><b>{{selectedFolder}}</b></h1>
+    </div>
+
+    <div id="searchDiv">
+      <app-search></app-search>
+    </div>
+
+   </div>
+
+   <div class="center" *ngIf="loading">
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+  </div>
+
+   <!-- <div  class="w3-row w3-container">
+    <div *ngFor="let name of graphNames;index as i;">
+      <div class="w3-col s4  w3-center w3-padding-large">
+        <div class="w3-card-4" >
+          <div id="uploaded">
+            <button (click)="fileSelection(name)">
+                <h2>{{name}} Graph</h2>
+              
+            </button>
+           </div>
+        </div>
+      </div> 
+    </div>
+   </div> -->
+
+
+
+   <main id="main">
+   <section id="values" class="values">
+
+    <div class="container" data-aos="fade-up">
+
+
+      <div class="row">
+
+        <div *ngIf="!loading" class="w3-row w3-container">
+          <div *ngFor="let image of uploadedImgProcessed;index as i;">
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="box">
+                
+                <button id="imgButton" (click)="imageClick(i)">
+                  <img id="imgLink" src={{uploadedImgProcessed[i]}} alt="response img" width="210" height="200" border="0" class="img-fluid">
+                </button>
+            
+                <h3>{{nameArr[i]}}</h3>
+                <p>{{tagArr[i]}}</p>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+      
+      </div>
+
+
+      
+
+    </div>
+
+  </section>
+
+  </main>
+
+
+
+
+ 
+
 </div>
+
+
