--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.scss
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.scss
@@ -1,3 +1,42 @@
+.values .box {
+  padding: 30px;
+  box-shadow: 0px 0 5px rgba(1, 41, 112, 0.6);
+  text-align: center;
+  transition: 0.2s;
+  height: 85%;
+  width: 108%;
+  background-color: #fff;
+  cursor: pointer;
+  border-radius: 15px;
+}
+
+.values .box img {
+  padding: 20px 10px;
+  transition: 0.5s;
+  transform: scale(1.1);
+  
+}
+
+.values .box h3 {
+  font-size: 24px;
+  color: #012970;
+  font-weight: 700;
+  margin-bottom: 18px;
+}
+
+.values .box:hover {
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.5);
+}
+
+.values .box:hover img {
+  transform: scale(1);
+}
+
+
+.values .box #imgButton {
+  border-style: none;
+  background-color: #fff;
+}
 
 
 bodY {
@@ -76,4 +115,10 @@ bodY {
 
   .headerDiv #searchDiv{
     left:50%;
+    margin-bottom: 3%;
   }
+
+  // .container{
+  //   position:relative;
+  //   top:50%;
+  // }
