--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" href="/path/to/jquery.mCustomScrollbar.css" />
+    <!-- <link rel="stylesheet" href="/path/to/jquery.mCustomScrollbar.css" /> -->
     <!-- Our Custom CSS -->
     <!-- <link rel="stylesheet" href="style.css"> -->
 
