sear dummy name and tag

--- a/Front-End/Image-Converter/src/app/gallery/gallery.component.scss
+++ b/Front-End/Image-Converter/src/app/gallery/gallery.component.scss
@@ -4,13 +4,13 @@
     text-align: center;
     transition: 0.2s;
     height: 90%;
-    // width: 105%;
+    width: 95%;
     background-color: #fff;
     cursor: pointer;
   }
   
   .values .box img {
-    padding: 30px 50px;
+    padding: 15px 25px;
     transition: 0.5s;
     transform: scale(1.1);
   }
