--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -84,7 +84,7 @@
     </div>
 
     <div id="searchDiv">
-      <app-search></app-search>
+      <app-search (searchText)="textEntered($event)"></app-search>
     </div>
 
    </div>
@@ -127,23 +127,28 @@
 
       <div class="row">
 
-        <div *ngIf="!loading" class="w3-row w3-container">
-          <div *ngFor="let image of uploadedImgProcessed;index as i;">
-            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-              <div class="box">
+        <!-- <div class="searchImages" *ngIf ="text ==='' || nameArr[x]"> -->
+
+          <div *ngIf="!loading" class="w3-row w3-container">
+            <div *ngFor="let image of uploadedImgProcessed;index as i;">
+              <div class="searchImages" *ngIf ="text ==='' || nameArr[i].toLowerCase().includes(text) || tagArr[i].toLowerCase().includes(text)">
+                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+                  <div class="box">
+                    
+                    <button id="imgButton" (click)="imageClick(i)">
+                      <img id="imgLink" src={{uploadedImgProcessed[i]}} alt="response img" width="210" height="200" border="0" class="img-fluid">
+                    </button>
                 
-                <button id="imgButton" (click)="imageClick(i)">
-                  <img id="imgLink" src={{uploadedImgProcessed[i]}} alt="response img" width="210" height="200" border="0" class="img-fluid">
-                </button>
-            
-                <h3>{{nameArr[i]}}</h3>
-                <p>{{tagArr[i]}}</p>
-                
-              </div>
+                    <h3>{{nameArr[i]}}</h3>
+                    <p>{{tagArr[i]}}</p>
+                    
+                  </div>
+                </div>
+               </div>
             </div>
           </div>
-        </div>
 
+        <!-- </div> -->
 
 
       
