--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -117,7 +117,7 @@
     </div>
    </div> -->
 
-
+  
 
    <main id="main">
    <section id="values" class="values">
@@ -132,7 +132,7 @@
           <div *ngIf="!loading" class="w3-row w3-container">
             <div *ngFor="let image of uploadedImgProcessed;index as i;">
               <div class="searchImages" *ngIf ="text ==='' || nameArr[i].toLowerCase().includes(text) || tagArr[i].toLowerCase().includes(text)">
-                <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+                <div class="w3-col s4  w3-center w3-padding-large" data-aos="fade-up" data-aos-delay="200">
                   <div class="box">
                     
                     <button id="imgButton" (click)="imageClick(i)">
@@ -147,6 +147,22 @@
                </div>
             </div>
           </div>
+
+
+          <!-- <div *ngIf="!loading" class="w3-row w3-container">
+            <div *ngFor="let image of uploadedImg;let pImage of uploadedImgProcessed;index as i;">
+              <div class="w3-col s4  w3-center w3-padding-large">
+                <div class="w3-card-4" >
+                  <div id="uploaded">
+                    <button (click)="imageClick(i,'uploaded')">
+                      <img id="imgLink" src={{uploadedImg[i]}} alt="response img" width="210" height="200">
+                    </button>
+                   </div>
+                </div>
+              </div> 
+            </div>
+           </div>
+        </div> -->
 
         <!-- </div> -->
 
