:sparkles: loading indicator

--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -50,6 +50,47 @@
               </button>
             </mat-card-actions>
           </mat-card>
+          <br/>
+          <div class="progress skill-bar">
+            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
+                <span class="skill"><i class="val">5%</i></span>
+            </div>
+        </div>
+          <mat-stepper headerPosition="bottom" #stepper>
+            <mat-step [stepControl]="firstFormGroup">
+              <ng-template matStepLabel>Improving quality of image</ng-template>
+              <!-- <form [formGroup]="firstFormGroup">
+                <ng-template matStepLabel>Fill out your name</ng-template>
+                <mat-form-field>
+                  <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
+                </mat-form-field>
+                <div>
+                  <button mat-button matStepperNext>Next</button>
+                </div>
+              </form> -->
+            </mat-step>
+            <mat-step [stepControl]="secondFormGroup">
+              <ng-template matStepLabel>Image classification</ng-template>
+              <!-- <form [formGroup]="secondFormGroup">
+                <ng-template matStepLabel>Fill out your address</ng-template>
+                <mat-form-field>
+                  <input matInput placeholder="Address" formControlName="secondCtrl" required>
+                </mat-form-field>
+                <div>
+                  <button mat-button matStepperPrevious>Back</button>
+                  <button mat-button matStepperNext>Next</button>
+                </div>
+              </form> -->
+            </mat-step>
+            <mat-step>
+              <ng-template matStepLabel>Done</ng-template>
+              <!-- You are now done.
+              <div>
+                <button mat-button matStepperPrevious>Back</button>
+                <button mat-button (click)="stepper.reset()">Reset</button>
+              </div> -->
+            </mat-step>
+          </mat-stepper>
 
           <div id="progress"></div>
             <!-- Image Filters -->
