--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -1,91 +1,103 @@
+<div class="w3-container" id="uploadHistory" style="margin-top:5px">
+  <h1 class="text-heading"><b>Upload Image</b></h1>
+  <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
+</div>
 
-        <div class="w3-container" id="uploadHistory" style="margin-top:5px">
-          <h1 class="text-heading"><b>Upload Image</b></h1>
-          <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
-        </div>
+
+<div class="center" *ngIf="loading">
+  <div class="wave"></div>
+  <div class="wave"></div>
+  <div class="wave"></div>
+  <div class="wave"></div>
+  <div class="wave"></div>
+  <div class="wave"></div>
+  <div class="wave"></div>
+  <div class="wave"></div>
+  <div class="wave"></div>
+  <div class="wave"></div>
+</div>
+
+<!-- <img id="load" *ngIf="loading" src="assets/loading.gif" width="400"/> -->
+<!-- <mat-spinner *ngIf="loading" id="spin" [diameter]="150" primary style="margin-top:50px;margin:0 auto;"></mat-spinner> -->
 
 
-        <div class="center" *ngIf="loading">
-          <div class="wave"></div>
-          <div class="wave"></div>
-          <div class="wave"></div>
-          <div class="wave"></div>
-          <div class="wave"></div>
-          <div class="wave"></div>
-          <div class="wave"></div>
-          <div class="wave"></div>
-          <div class="wave"></div>
-          <div class="wave"></div>
-        </div>
+<mat-card id="uploadcard" *ngIf="!loading" class="card" draggable="true" ngClass="{{ dragAreaClass }}">
 
-        <!-- <img id="load" *ngIf="loading" src="assets/loading.gif" width="400"/> -->
-        <!-- <mat-spinner *ngIf="loading" id="spin" [diameter]="150" primary style="margin-top:50px;margin:0 auto;"></mat-spinner> -->
-        <mat-card id="uploadcard" *ngIf="!loading" class="card" draggable="true" ngClass="{{ dragAreaClass }}">
-        
-                      <span id="drag">Drag files here
-                        <a href="javascript:void(0)" (click)="file.click()"> or click to open </a>
-                      </span>
-              <mat-card-content>
-                       
-                        <input
-                          type="file"
-                          #file
-                          [multiple]="false"
-                          (change)="onFileChange($event)"
-                          style="display:none"
-                        /><br>
-        
-                        <div class="dragged-files-wrapper" ><!--*ngIf="draggedFiles">-->
-                          <!--<div class="file" *ngFor="let file of draggedFiles">
-                            <img mat-card-image id="uploadedImg" src={{displayImg}} alt="Photo of a Shiba Inu">
-                          </div>-->
-                          <img mat-card-image id="uploadedImg" src={{displayImg}} alt="Photo of a Shiba Inu">
-                        </div>
-                        
-                </mat-card-content>
-                <div class="error" *ngIf="error" style = "color:red;">{{error}}</div>
-            <mat-card-actions>
-              <button  [disabled]="isDisabled" (click)="saveFiles()" class="w3-button w3-block w3-padding-large w3-blue w3-margin-bottom">
-                Upload
-              </button>
-            </mat-card-actions>
-          </mat-card>
-          <div *ngIf="showDim" class="original-image-dimensions">
-            <h4>Original Image Dimensions</h4>
-            <p>Image height: {{height}}</p>
-            <p>Image width: {{width}}</p>
-          </div>
+  <span id="drag">Drag files here
+    <a href="javascript:void(0)" (click)="file.click()"> or click to open </a>
+  </span>
+
+  <mat-card-content>
+    <input type="file" #file [multiple]="false" (change)="onFileChange($event)" style="display:none"/>
+    <br>
+    <hr>
+
+    <div class="fieldsetWrapper">
+      <div class="fieldsetContainer">
+          <fieldset>
+              <legend>Width: px</legend>
+          </fieldset>
+  
+          <fieldset>
+              <legend>Height: px</legend>
+          </fieldset>
           
-            <!-- Image Filters -->
-            <div id="imageFilter">
-              <app-filter></app-filter>
-           </div>
-           <div *ngIf="uploadSuccess" class="original-image-dimensions">
-            <h4>Resized Image Dimensions</h4>
-            <p>Image height: {{resizedHeight}}</p>
-            <p>Image width: {{resizedWidth}}</p>
-          </div>
+          <fieldset>
+              <legend>Width: px</legend>
+          </fieldset>
+  
+          <fieldset>
+              <legend>Height: px</legend>
+          </fieldset>
+      </div>
+    </div>
 
-          <!--Image Annotation-->
-          <div *ngIf="uploadSuccess" class="comment-form-container">
-            <h1>Image Annotation   
-            </h1>  
-            <!-- <hr />   -->
-            <div class="form-group container">
-              <form [formGroup]="form" (ngSubmit)="onComment()">
-                <textarea class="form-control" row="5" placeholder="Type your notes here please..." rows="5" formControlName="comment"></textarea>
-                <button class="btn btn-success pull-right" type="submit" [disabled]="form.invalid">
-                  {{commentLabel}}
-                </button>
-    
-                <button *ngIf="hasCancelLabel" type="button" class="comment-form-button comment-form-cancel-button">
-                  Cancel
-                </button>
-              </form>
-            </div>
-          </div>
+    <div class="dragged-files-wrapper" >
+      <img mat-card-image id="uploadedImg" src={{displayImg}} alt="Graph Image">
+    </div>
+  </mat-card-content>
 
-        <!-- Conversion Formats -->
-        <div id="conversionFormat">
-          <app-conversion></app-conversion>
-        </div>
+  <div class="error" *ngIf="error" style = "color:red;">{{error}}</div>
+
+  <mat-card-actions>
+    <button  [disabled]="isDisabled" (click)="saveFiles()" class="w3-button w3-block w3-padding-large w3-blue w3-margin-bottom">
+      Upload
+    </button>
+  </mat-card-actions>
+</mat-card>
+
+<div *ngIf="showDim" class="original-image-dimensions">
+  <h4>Original Image Dimensions</h4>
+  <p>Image height: {{height}}px</p>
+  <p>Image width: {{width}}px</p>
+</div>
+
+<!-- Image Filters -->
+<div id="imageFilter">
+  <app-filter></app-filter>
+</div>
+<div *ngIf="uploadSuccess" class="original-image-dimensions">
+  <h4>Resized Image Dimensions</h4>
+  <p>Image height: {{resizedHeight}}px</p>
+  <p>Image width: {{resizedWidth}}px</p>
+</div>
+
+<!--Image Annotation-->
+<div *ngIf="uploadSuccess" class="comment-form-container">
+  <h1>Image Annotation
+  </h1>
+  <!-- <hr />   -->
+  <div class="form-group container">
+    <form [formGroup]="form" (ngSubmit)="onComment()">
+      <textarea id="commentsection" class="form-control" row="5" placeholder="Type your notes here please..." rows="5" formControlName="comment">{{initialComment}}</textarea>
+      <button class="btn btn-success pull-right" type="submit" [disabled]="form.invalid">
+        {{commentLabel}}
+      </button>
+    </form>
+  </div>
+</div>
+
+<!-- Conversion Formats -->
+<div id="conversionFormat">
+  <app-conversion></app-conversion>
+</div>
