--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -87,6 +87,17 @@
       <app-search (searchText)="textEntered($event)"></app-search>
     </div>
 
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Sort by:
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">Name ascending</a>
+        <a class="dropdown-item" href="#">Name descending</a>
+        <a class="dropdown-item" href="#">Date uploaded</a>
+      </div>
+    </div>
+
    </div>
 
    <div class="center" *ngIf="loading">
@@ -131,10 +142,10 @@
 
           <div *ngIf="!loading" class="w3-row w3-container">
             <div *ngFor="let image of uploadedImgProcessed;index as i;">
-              <div class="searchImages" *ngIf ="text ==='' || nameArr[i].toLowerCase().includes(text) || tagArr[i].toLowerCase().includes(text)">
+              <div class="searchImages" *ngIf ="text ==='' || nameArr[i].includes(text) || tagArr[i].includes(text)">
                 <div class="w3-col s4  w3-center w3-padding-large" data-aos="fade-up" data-aos-delay="200">
                   <div class="box">
-                    
+                    <!-- || nameArr[i].toLowerCase().includes(dash) -->
                     <button id="imgButton" (click)="imageClick(i)">
                       <img id="imgLink" src={{uploadedImgProcessed[i]}} alt="response img" width="210" height="200" border="0" class="img-fluid">
                     </button>
