--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.scss
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.scss
@@ -115,8 +115,12 @@ bodY {
   }
 
   .headerDiv #searchDiv{
-    left:50%;
+    left:90%;
     margin-bottom: 3%;
+  }
+
+  .headerDiv .dropdown{
+    left:20%;
   }
 
   // .container{
